# gw2-discord-group-bot

./: .markdownlint.json  .pylintrc  README.md  conf.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
src/bot/: __main__.py
