[metadata]
name = Discord Bot
version = 0.0.1
author = Stefan Wixfort
description = Discord Bot
long_description = file: README.rst
keywords = python, discord, bot
license_files = LICENSE
project_url = https://github.com/swixfort/discord-bot
classifiers = 
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.10
install_requires = file: requirements.txt
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude =
    tests

docs =
    sphinx >= 3.5